[package]
name = "gitomato"
version = "1.0.1"
edition = "2024"

[dependencies]
anyhow = { version = "1", default-features = false }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3.22", default-features = false, features = ["fmt"] }
clap = { version = "4", default-features = false, features = ["std", "derive", "env", "help"] }
tokio = { version = "1.48", default-features = false, features = ["macros", "rt-multi-thread", "signal"] }
hyper = { version = "1", default-features = false, features = ["server", "http1"] }
http-body-util = { version = "0.1", default-features = false }
hyper-util = { version = "0.1", default-features = false, features = ["tokio"] }
gix = { version = "0.77", default-features = false, features = ["blocking-http-transport-reqwest-rust-tls"] }
